bobcat (3.22.00)

  * Added new class CSV, handling comma separated values

  * Learned something new: in order to define a const reverse iterator, define
    Type const &reference in the iterator class, and define Type const
    &operator*() const. The use of shared_ptr (see git commit
    1215566b78...) is not required.

  * Applied several cosmetic changes

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 28 Feb 2014 19:44:52 +0100

bobcat (3.21.01)

  * Oops, 3.21.00 lacked the 'iterator' header file that provides Iterator and
    ReverseIterator.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 Feb 2014 15:25:58 +0100

bobcat (3.21.00)

  * Added the class templates Iterator and ReverseIterator

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 15 Feb 2014 12:25:07 +0100

bobcat (3.20.01)

  * Added the LinearMap(initializer_list<value_type>) constructor to the
    class template LinearMap.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 18 Jan 2014 16:55:32 +0100

bobcat (3.20.00)

  * Added the class template LinearMap implementing an associative array using
    linear searching.    

  * Fixed a bug in ArgConfig's option(string *dest, char const *key). The
    current version conforms to ArgConfig's man-page, stating that a key's
    trailing colon (:) in a configuration file is ignored if a key without a
    colon is passed as an argument to this member.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 18 Jan 2014 12:40:13 +0100

bobcat (3.19.01)
    
  * Fixed Process's d_closedByChild initialization (used by FreeBSD systems).

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 30 Dec 2013 11:17:50 +0100

bobcat (3.19.00)
    
  * Added Signal::remove, removing a previously added signal handling object.

  * Redesigned Process so that it (partially) uses the pimpl idiom. Also added
    the eoi manipulator and several new member functions.

  * Updated man-pages for Pipe, Redirector, Process, and Signal, 
