@@ -1,3 +1,9 @@
+  * Hurd-i386 architectures do not (completely?) implement the POSIX standard,
+    requiring the definition of some specific macro definitions. They are
+    applied to stat/path.cc and signal/verify.cc
+
+
+
 bobcat (3.22.00)
 
   * Added new class CSV, handling comma separated values
